[tool.poetry]
name = "helloworld-backend"
version = "0.0.1"
description = "API for the personal blog"
authors = ["Dmitrii Diachkov <djachkov.dmitrij@gmail.com>"]
readme = "README.md"
# packages = [{include = "helloworld_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.89.1"
uvicorn = "^0.20.0"
motor = "^3.1.1"
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
